--- a/commands-yml/commands/interactions/touch/multi-touch-perform.yml
+++ b/commands-yml/commands/interactions/touch/multi-touch-perform.yml
@@ -44,7 +44,7 @@ example_usage:
       await action.perform();
   javascript_wdio:
     |
-      driver.touchMultiPerform([
+      driver.multiTouchPerform([
         { action: 'press', options: { x: 100, y: 250 }},
         { action: 'moveTo', options: { x: 300, y: 100 }},
         { action: 'release' }
